--- a/classes/_local_main_.services.wpcli.html
+++ b/classes/_local_main_.services.wpcli.html
@@ -86,6 +86,7 @@
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#coreupdate" class="tsd-kind-icon">core<wbr>Update</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#getoption" class="tsd-kind-icon">get<wbr>Option</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#isinstalled" class="tsd-kind-icon">is<wbr>Installed</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#ismultisite" class="tsd-kind-icon">is<wbr>Multisite</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.wpcli.html#listen" class="tsd-kind-icon">listen</a></li>
@@ -107,7 +108,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/main.d.ts#L995">main.d.ts:995</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/main.d.ts#L1010">main.d.ts:1010</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -124,6 +125,32 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="getoption" class="tsd-anchor"></a>
+					<h3>get<wbr>Option</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Option<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a>, option<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/main.d.ts#L1008">main.d.ts:1008</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>site: <a href="_local_.site.html" class="tsd-signature-type">Site</a></h5>
+								</li>
+								<li>
+									<h5>option: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="isinstalled" class="tsd-anchor"></a>
 					<h3>is<wbr>Installed</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -133,7 +160,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/main.d.ts#L997">main.d.ts:997</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/main.d.ts#L1012">main.d.ts:1012</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -156,7 +183,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/main.d.ts#L999">main.d.ts:999</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/main.d.ts#L1014">main.d.ts:1014</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -179,7 +206,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/main.d.ts#L991">main.d.ts:991</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/main.d.ts#L1004">main.d.ts:1004</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -190,13 +217,13 @@
 					<a name="run" class="tsd-anchor"></a>
 					<h3>run</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">run<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a>, args<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span>, opts<span class="tsd-signature-symbol">?: </span><a href="../interfaces/_local_main_.services.wpclirunopts.html" class="tsd-signature-type">WpCliRunOpts</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">run<span class="tsd-signature-symbol">(</span>site<span class="tsd-signature-symbol">: </span><a href="_local_.site.html" class="tsd-signature-type">Site</a>, args<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span>, opts<span class="tsd-signature-symbol">?: </span><a href="../interfaces/_local_main_.services.wpclirunopts.html" class="tsd-signature-type">WpCliRunOpts</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/main.d.ts#L993">main.d.ts:993</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/main.d.ts#L1006">main.d.ts:1006</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -211,7 +238,7 @@
 									<h5><span class="tsd-flag ts-flagOptional">Optional</span> opts: <a href="../interfaces/_local_main_.services.wpclirunopts.html" class="tsd-signature-type">WpCliRunOpts</a></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -227,72 +254,6 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.addsite.html" class="tsd-kind-icon">Add<wbr>Site</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.addoninstaller.html" class="tsd-kind-icon">Addon<wbr>Installer</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.addonloader.html" class="tsd-kind-icon">Addon<wbr>Loader</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.adminer.html" class="tsd-kind-icon">Adminer</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.appstate.html" class="tsd-kind-icon">App<wbr>State</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.blueprints.html" class="tsd-kind-icon">Blueprints</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.changesitedomain.html" class="tsd-kind-icon">Change<wbr>Site<wbr>Domain</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.clonesite.html" class="tsd-kind-icon">Clone<wbr>Site</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.configtemplates.html" class="tsd-kind-icon">Config<wbr>Templates</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.deletesite.html" class="tsd-kind-icon">Delete<wbr>Site</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.exportsite.html" class="tsd-kind-icon">Export<wbr>Site</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.importsite.html" class="tsd-kind-icon">Import<wbr>Site</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.lightningservices.html" class="tsd-kind-icon">Lightning<wbr>Services</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.multisite.html" class="tsd-kind-icon">Multi<wbr>Site</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.ports.html" class="tsd-kind-icon">Ports</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.router.html" class="tsd-kind-icon">Router</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.sequelpro.html" class="tsd-kind-icon">Sequel<wbr>Pro</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.sitedatabase.html" class="tsd-kind-icon">Site<wbr>Database</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.siteinfo.html" class="tsd-kind-icon">Site<wbr>Info</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.siteprocessmanager.html" class="tsd-kind-icon">Site<wbr>Process<wbr>Manager</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.siteprovisioner.html" class="tsd-kind-icon">Site<wbr>Provisioner</a>
-					</li>
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.siteshellentry.html" class="tsd-kind-icon">Site<wbr>Shell<wbr>Entry</a>
-					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class tsd-parent-kind-namespace">
@@ -300,6 +261,9 @@
 						<ul>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.wpcli.html#coreupdate" class="tsd-kind-icon">core<wbr>Update</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="_local_main_.services.wpcli.html#getoption" class="tsd-kind-icon">get<wbr>Option</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.wpcli.html#isinstalled" class="tsd-kind-icon">is<wbr>Installed</a>
@@ -317,48 +281,6 @@
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-class tsd-parent-kind-namespace">
-						<a href="_local_main_.services.x509cert.html" class="tsd-kind-icon">X509<wbr>Cert</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="../interfaces/_local_main_.services.iaddsite.html" class="tsd-kind-icon">IAdd<wbr>Site</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="../interfaces/_local_main_.services.iblueprintsoptions.html" class="tsd-kind-icon">IBlueprints<wbr>Options</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="../interfaces/_local_main_.services.iclonesite.html" class="tsd-kind-icon">IClone<wbr>Site</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="../interfaces/_local_main_.services.ideletesite.html" class="tsd-kind-icon">IDelete<wbr>Site</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="../interfaces/_local_main_.services.ideletesites.html" class="tsd-kind-icon">IDelete<wbr>Sites</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="../interfaces/_local_main_.services.idomains.html" class="tsd-kind-icon">IDomains</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="../interfaces/_local_main_.services.iexportsite.html" class="tsd-kind-icon">IExport<wbr>Site</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="../interfaces/_local_main_.services.iwpcredentials.html" class="tsd-kind-icon">IWPCredentials</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="../interfaces/_local_main_.services.sitecerts.html" class="tsd-kind-icon">Site<wbr>Certs</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-parent-kind-namespace">
-						<a href="../interfaces/_local_main_.services.wpclirunopts.html" class="tsd-kind-icon">Wp<wbr>Cli<wbr>Run<wbr>Opts</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-namespace">
-						<a href="../modules/_local_main_.services.html#portallocation" class="tsd-kind-icon">Port<wbr>Allocation</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-namespace">
-						<a href="../modules/_local_main_.services.html#portpoolallocationrequest" class="tsd-kind-icon">Port<wbr>Pool<wbr>Allocation<wbr>Request</a>
-					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-namespace">
-						<a href="../modules/_local_main_.services.html#portserviceallocationrequest" class="tsd-kind-icon">Port<wbr>Service<wbr>Allocation<wbr>Request</a>
-					</li>
 				</ul>
 			</nav>
 		</div>
@@ -392,6 +314,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
