--- a/enums/_local_.siteservicerole.html
+++ b/enums/_local_.siteservicerole.html
@@ -90,7 +90,7 @@
 					<div class="tsd-signature tsd-kind-icon">DATABASE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;db&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L23">index.d.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L23">index.d.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">HTTP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;http&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L22">index.d.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L22">index.d.ts:22</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -110,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">PHP<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;php&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L24">index.d.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L24">index.d.ts:24</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -196,6 +196,9 @@
 						<a href="../modules/_local_.html#logginglevel" class="tsd-kind-icon">Logging<wbr>Level</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#siteport" class="tsd-kind-icon">Site<wbr>Port</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
@@ -248,6 +251,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
