--- a/modules/_local_main_.services.html
+++ b/modules/_local_main_.services.html
@@ -99,13 +99,19 @@
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.adminer.html" class="tsd-kind-icon">Adminer</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.appstate.html" class="tsd-kind-icon">App<wbr>State</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.blueprints.html" class="tsd-kind-icon">Blueprints</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.capi.html" class="tsd-kind-icon">CAPI</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.changesitedomain.html" class="tsd-kind-icon">Change<wbr>Site<wbr>Domain</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.clonesite.html" class="tsd-kind-icon">Clone<wbr>Site</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.configtemplates.html" class="tsd-kind-icon">Config<wbr>Templates</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.deletesite.html" class="tsd-kind-icon">Delete<wbr>Site</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.devkit.html" class="tsd-kind-icon">Dev<wbr>Kit</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.exportsite.html" class="tsd-kind-icon">Export<wbr>Site</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.importsite.html" class="tsd-kind-icon">Import<wbr>Site</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.lightningservices.html" class="tsd-kind-icon">Lightning<wbr>Services</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.livelinks.html" class="tsd-kind-icon">Live<wbr>Links</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.livelinksfree.html" class="tsd-kind-icon">Live<wbr>Links<wbr>Free</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.livelinksmuplugin.html" class="tsd-kind-icon">Live<wbr>Links<wbr>MuPlugin</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.livelinkspro.html" class="tsd-kind-icon">Live<wbr>Links<wbr>Pro</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.multisite.html" class="tsd-kind-icon">Multi<wbr>Site</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.ports.html" class="tsd-kind-icon">Ports</a></li>
 								<li class="tsd-kind-class tsd-parent-kind-namespace"><a href="../classes/_local_main_.services.router.html" class="tsd-kind-icon">Router</a></li>
@@ -153,7 +159,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Allocation<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>blacklistedPorts<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">; </span>ports<span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/main.d.ts#L1010">main.d.ts:1010</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/main.d.ts#L1025">main.d.ts:1025</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -179,7 +185,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Pool<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/main.d.ts#L1006">main.d.ts:1006</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/main.d.ts#L1021">main.d.ts:1021</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -197,7 +203,7 @@
 					<div class="tsd-signature tsd-kind-icon">Port<wbr>Service<wbr>Allocation<wbr>Request<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/main.d.ts#L1002">main.d.ts:1002</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/main.d.ts#L1017">main.d.ts:1017</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -240,6 +246,9 @@
 						<a href="../classes/_local_main_.services.blueprints.html" class="tsd-kind-icon">Blueprints</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.capi.html" class="tsd-kind-icon">CAPI</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.changesitedomain.html" class="tsd-kind-icon">Change<wbr>Site<wbr>Domain</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
@@ -252,6 +261,9 @@
 						<a href="../classes/_local_main_.services.deletesite.html" class="tsd-kind-icon">Delete<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.devkit.html" class="tsd-kind-icon">Dev<wbr>Kit</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.exportsite.html" class="tsd-kind-icon">Export<wbr>Site</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
@@ -259,6 +271,18 @@
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.lightningservices.html" class="tsd-kind-icon">Lightning<wbr>Services</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.livelinks.html" class="tsd-kind-icon">Live<wbr>Links</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.livelinksfree.html" class="tsd-kind-icon">Live<wbr>Links<wbr>Free</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.livelinksmuplugin.html" class="tsd-kind-icon">Live<wbr>Links<wbr>MuPlugin</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-namespace">
+						<a href="../classes/_local_main_.services.livelinkspro.html" class="tsd-kind-icon">Live<wbr>Links<wbr>Pro</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-namespace">
 						<a href="../classes/_local_main_.services.multisite.html" class="tsd-kind-icon">Multi<wbr>Site</a>
@@ -364,6 +388,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
