--- a/enums/_local_.hostid.html
+++ b/enums/_local_.hostid.html
@@ -96,7 +96,7 @@
 					<div class="tsd-signature tsd-kind-icon">FLYWHEEL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;flywheel&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L181">index.d.ts:181</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L191">index.d.ts:191</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">WPE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;wpe&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L182">index.d.ts:182</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L192">index.d.ts:192</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -189,6 +189,9 @@
 						<a href="../modules/_local_.html#logginglevel" class="tsd-kind-icon">Logging<wbr>Level</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#siteport" class="tsd-kind-icon">Site<wbr>Port</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
@@ -241,6 +244,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
