--- a/enums/_local_.siteservicetype.html
+++ b/enums/_local_.siteservicetype.html
@@ -89,7 +89,7 @@
 					<div class="tsd-signature tsd-kind-icon">DOCKER_<wbr>COMPOSE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;docker-compose&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L18">index.d.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L18">index.d.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -99,7 +99,7 @@
 					<div class="tsd-signature tsd-kind-icon">LIGHTNING<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;lightning&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L17">index.d.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L17">index.d.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -182,6 +182,9 @@
 						<a href="../modules/_local_.html#logginglevel" class="tsd-kind-icon">Logging<wbr>Level</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#siteport" class="tsd-kind-icon">Site<wbr>Port</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
@@ -234,6 +237,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
