--- a/interfaces/_local_.releasemanifest.html
+++ b/interfaces/_local_.releasemanifest.html
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">changelog<wbr>Url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L275">index.d.ts:275</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L285">index.d.ts:285</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L273">index.d.ts:273</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L283">index.d.ts:283</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -122,7 +122,7 @@
 					<div class="tsd-signature tsd-kind-icon">notes<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L274">index.d.ts:274</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L284">index.d.ts:284</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -132,7 +132,7 @@
 					<div class="tsd-signature tsd-kind-icon">pub_<wbr>date<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L276">index.d.ts:276</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L286">index.d.ts:286</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -142,7 +142,7 @@
 					<div class="tsd-signature tsd-kind-icon">size<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L277">index.d.ts:277</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L287">index.d.ts:287</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -152,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L272">index.d.ts:272</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L282">index.d.ts:282</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -162,7 +162,7 @@
 					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/8813417/index.d.ts#L278">index.d.ts:278</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/cd715c5/index.d.ts#L288">index.d.ts:288</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -260,6 +260,9 @@
 						<a href="../modules/_local_.html#logginglevel" class="tsd-kind-icon">Logging<wbr>Level</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-kind-icon">Site<wbr>Live<wbr>Link<wbr>Pro<wbr>Settings</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_local_.html#siteport" class="tsd-kind-icon">Site<wbr>Port</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
@@ -313,6 +316,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
